cmake_minimum_required(VERSION 3.21)
project(progprocedurale)

set(CMAKE_CXX_STANDARD 17)
#set(CMAKE_C_STANDARD 11)
#add_executable(progprocedurale cpp/IntVector/IntVector.cpp)
#add_executable(progprocedurale c/esercizi_esame/UniqueSon.c)

#add_executable(progprocedurale cpp/goodNodes/GoodNodex.cpp)
add_executable(progprocedurale cpp/esameSettembre/Persona.cpp)